fix: switch border in dark mode

--- a/src/pages/reader/PageNav/preview.sass
+++ b/src/pages/reader/PageNav/preview.sass
@@ -181,6 +181,10 @@ body.ant-scrolling-effect .preview-drop
       padding-bottom: 10px
       &:last-of-type
         padding: 0
+      .ant-switch
+        outline: $default-border
+        .ant-switch-handle::before
+          border: $default-border
 
 .preview-avatar
   box-sizing: content-box
